--- a/src/main/webapp/cust_table_head/home.html
+++ b/src/main/webapp/cust_table_head/home.html
@@ -12,6 +12,7 @@
 
 
 <script type="text/javascript" src="cust_table_head/js/public/jquery-1.9.1.min.js"></script>
+<script type="text/javascript" src="cust_table_head/js/public/jquery-ui.min.js"></script>
 <script type="text/javascript" src="cust_table_head/js/public/bootstrap.min.js"></script>
 <script type="text/javascript" src="cust_table_head/js/public/angular.min.js"></script>
 
