--- a/src/main/webapp/cust_table_head/home.html
+++ b/src/main/webapp/cust_table_head/home.html
@@ -9,7 +9,10 @@
 </head>
 <body ng-controller="homeCtrl">
 <button ng-click="loadData()">加载数据</button>
+
 <cust-table id="table1"></cust-table>
+
+
 <br>
 <cust-table></cust-table>
 <br>
@@ -17,10 +20,12 @@
 <!--<br>-->
 <!--<cust-table></cust-table>-->
 
-<script type="text/javascript" src="cust_table_head/js/public/jquery-1.9.1.min.js"></script>
+<!--<script type="text/javascript" src="cust_table_head/js/public/jquery-1.9.1.min.js"></script>-->
+<script type="text/javascript" src="cust_table_head/js/public/jquery.min.js"></script>
 <script type="text/javascript" src="cust_table_head/js/public/jquery-ui.min.js"></script>
 <script type="text/javascript" src="cust_table_head/js/public/bootstrap.min.js"></script>
 <script type="text/javascript" src="cust_table_head/js/public/angular.min.js"></script>
+
 
 
 <!--    common-->
